<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/toolbar_nbse"/>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="3"
    >

    <LinearLayout
        android:id="@+id/secondary"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="1"
        android:backgroundTint="@color/colorSecondary"
        android:background="@drawable/roundcorners_image"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secondary"
            android:textSize="25sp"
            android:textStyle="bold"
            android:shadowDx="1"
            android:shadowDy="-2"
            android:shadowRadius="1"
            android:shadowColor="@android:color/black"
            android:textColor="@android:color/white"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/s_secondary"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="1"
        android:backgroundTint="@color/colorSenSecondary"
        android:background="@drawable/roundcorners_image"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/senior_secondary"
            android:textSize="25sp"
            android:textStyle="bold"
            android:shadowDx="1"
            android:shadowDy="-2"
            android:shadowRadius="1"
            android:shadowColor="@android:color/black"
            android:textColor="@android:color/white"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/diploma"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="1"
        android:backgroundTint="@color/colorDeploma"
        android:background="@drawable/roundcorners_image"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Diploma"
            android:textSize="25sp"
            android:textStyle="bold"
            android:shadowDx="1"
            android:shadowDy="-2"
            android:shadowRadius="1"
            android:shadowColor="@android:color/black"
            android:textColor="@android:color/white"
            />

    </LinearLayout>

</LinearLayout>
</LinearLayout>