<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <include layout="@layout/toolbar_nbse"/>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:backgroundTint="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        android:padding="20dp">

       <!-- <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textStyle="bold"
            android:shadowDx="1"
            android:shadowDy="-2"
            android:shadowRadius="1"
            android:shadowColor="@android:color/black"
            android:textColor="@android:color/white"
            android:textSize="25sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="30dp"
            android:background="@color/colorSecondary" />-->


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white"
            app:backgroundTint="@android:color/white"
            android:gravity="center">

            <EditText
                android:id="@+id/rollno"
                android:textColorHint="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                app:backgroundTint="@android:color/white"
                android:gravity="center"
                android:hint="@string/rollno"
                android:inputType="numberDecimal"
                android:textAppearance="@style/TextAppearance.Design.Hint"
                android:textColor="@android:color/background_dark"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="sans" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white"
            app:backgroundTint="@android:color/white"
            android:layout_marginVertical="20dp"
            android:gravity="center">

            <EditText
                android:id="@+id/dob"
                app:backgroundTint="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/dob"
                android:textAppearance="@style/TextAppearance.Design.Hint"
                android:textColor="@android:color/background_dark"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="sans" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/submit_result"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:background="@drawable/border"
            android:backgroundTint="@color/colorSecondary"
            android:elevation="4dp"
            android:text="@string/submit"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>
</LinearLayout>